--- a/requirements.txt
+++ b/requirements.txt
@@ -1,46 +1,8 @@
-apt-xapian-index==0.47
-backcall==0.1.0
-blinker==1.3
-chardet==2.3.0
-command-not-found==0.3
-cryptography==1.2.3
-decorator==4.4.1
-defer==1.0.6
+asgiref==3.2.3
 dj-database-url==0.5.0
-gunicorn==20.0.4
-httplib2==0.9.1
-idna==2.0
-ipython==7.9.0
-ipython-genutils==0.2.0
-jedi==0.15.1
-oauthlib==1.0.3
-oneconf==0.3.9
-parso==0.5.1
-pexpect==4.7.0
-pickleshare==0.7.5
-piston-mini-client==0.7.5
-prompt-toolkit==2.0.10
-psycopg2-binary==2.8.4
-ptyprocess==0.6.0
-pyasn1==0.1.9
-pycurl==7.43.0
-Pygments==2.4.2
-pygobject==3.20.0
-PyJWT==1.3.0
-python-apt==1.1.0b1+ubuntu0.16.4.5
-python-debian==0.1.27
-python-systemd==231
-pyxdg==0.25
-requests==2.9.1
-sessioninstaller==0.0.0
-six==1.13.0
-software-center-aptd-plugins==0.0.0
-ssh-import-id==5.5
-traitlets==4.3.3
-ubuntu-drivers-common==0.0.0
-unattended-upgrades==0.1
-urllib3==1.13.1
-virtualenv==16.7.7
-wcwidth==0.1.7
+Django==3.0
+djangorestframework==3.10.3
+psycopg2==2.8.4
+pytz==2019.3
+sqlparse==0.3.0
 whitenoise==4.1.4
-xkit==0.0.0
